# succantgame

sp1back/prover/: Cargo.toml
sp1back/prover/src/: main.rs  score
sp1back/score/program/: Cargo.toml
sp1back/score/program/src/: main.rs
succant/: index.html  package-lock.json  package.json
succant/src/: App.jsx  main.jsx
succant/src/scenes/: GameScene.jsx  MainMenuScene.jsx  UpgradeScene.jsx
succant/src/sp1/: Verifier.jsx  sp1_wasm_verifier_bg.wasm
