[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-sdk = "4.0.0"
hex = "0.4.3"
sp1-verifier = { version = "4.0.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6"